--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -23,7 +23,7 @@
         <section class="merch">
             <div class="container">
                 <br>
-                <h2 style="text-align: center;">MERCHANDISE</h2>
+                <h2 style="text-align: center; font-weight: 900; color:#752329">MERCHANDISE</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
 
                     <div class="col">
