--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -76,7 +76,7 @@
                                 <h5 class="card-title" style="color: #E8E8E1">
                                     <%= merch[2].merchName %>
                                 </h5>
-                                <p class="card-text" style="width: 100%; height: auto; display: block; border-radius: 6px; border: 2px solid #bbb;">PHP
+                                <p class="card-text" style="color: #E8E8E1">PHP
                                     <%= merch[2].price %>
                                 </p>
                                 <button type="button" class="btn btn-md" style=" margin: 0 auto; display: block; color: #F5F5DC; background-color: #752329;" data-bs-toggle="modal" data-bs-target="#productView2">Quick View</button>
