UPDATED BREWGEAR + MENU + SEARCH

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                             <div class="carousel-caption d-none d-md-block" style="background-color: rgba(15, 15, 15, 0.6);">
                                 <h3 class="text-white">FEATURE</h3>
                                 <p class="text-white" style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">We didn't start out as simply another coffee shop—in fact, we were their suppliers! <br> Learn more about our very own story.</p>
-                                <p><a class="btn text-white" style="background-color: #752329;" href="#">Learn more!</a></p>
+                                <p><a class="btn text-white" style="background-color: #752329;" href="/feature">Learn more!</a></p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -176,7 +176,7 @@
                 <!-- CUSTOMER REVIEW END -->
 
                 <!-- LOCATION START -->
-                <section id="location " style="background-color: #752329; padding:20px; color: #F5F5DC; ">
+                <section id="location" style="background-color: #752329; padding:20px; color: #F5F5DC; ">
                     <br>
                     <div class="container ">
                         <div class="row featurette ">
