--- a/views/feature.ejs
+++ b/views/feature.ejs
@@ -146,9 +146,9 @@
     </div>
 
     <!-- Infographics Section -->
-    <section class="container-fluid my-5" style="background-color: #E8E8E1;  padding: 50px 20px;">
-      <div class="container">
-        
+    <section style="background-color: #E8E8E1;">
+      <div class="container-fluid my-5">
+      <br>
       <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: center; font-weight: 900; color:#752329; padding-bottom: 20px; ">How We Started</h3>
       <div class="infographic d-flex justify-content-center">
           <img style="display: block; width: 150%; max-width: 1050px;" src="./media/CAUTION-INFOG.png" alt="Caution Infographic">
@@ -157,7 +157,7 @@
     </section>
 
     <!-- LOCATION START -->
-    <section id="location" style="background-color: #752329; padding:20px; color: #F5F5DC;">
+    <div id="location" style="background-color: #752329; padding:20px; color: #F5F5DC;">
         <br>
         <div class="container">
         <div class="row featurette">
@@ -186,7 +186,7 @@
         </div>
         </div>
         <br>
-    </section>
+    </div>
     <!-- LOCATION END -->
 
     <%- include('footer.ejs') %>
