--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 
     <%- include('header.ejs') %>
 
-    <section class="vh-100" style="background-color: #f0f0f0; background-size: cover; background-position: center;">
+    <section class=" " style="background-color: #f0f0f0; background-size: cover; background-position: center;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
