--- a/views/merch.ejs
+++ b/views/merch.ejs
@@ -45,7 +45,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel" style="font-weight:900">MERCHANDISE</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel" style="font-weight:900; color:#752329">MERCHANDISE</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -88,7 +88,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel2" style="font-weight:900">MERCHANDISE</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel2" style="font-weight:900; color:#752329">MERCHANDISE</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
@@ -130,7 +130,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel3" style="font-weight:900">MERCHANDISE</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel3" style="font-weight:900; color:#752329">MERCHANDISE</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
