--- a/views/header.ejs
+++ b/views/header.ejs
@@ -113,8 +113,8 @@
         
         <div class="container p-4">
           <!--LOGO-->
-          <a class="navbar-brand" href="/" style="z-index: 4;"><img src="./media/caution-logo-yellow.png" alt="" id="logo" class="img-fluid"></a>
-  
+          <a class="navbar-brand" href="/" style="z-index: 4;"><img src="./media/caution-logo-yellow.png" alt="" id="logo" class="img-fluid desk-logo"></a>
+          <!--<a class="navbar-brand" href="/"><img src="./media/favicon-l.png" alt="" class="img-fluid tab-phone-logo" id = "logo"></a>-->
           <!--NAV-->
   
             <!--TRIPLE ICONS-->
@@ -281,7 +281,7 @@
               <div class="d-flex flex-column">
                   <ul class="navbar-nav mt-3 mb-2 mb-lg-0">
                       <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="/">Home</a>
                       </li>
                       <li class="nav-item">
                       <a class="nav-link" href="/feature">Feature</a>
