--- a/views/review.ejs
+++ b/views/review.ejs
@@ -25,7 +25,7 @@
         <div class="container-fluid"> 
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-            <h2 class="fs-6 text-uppercase text-center" style="color: #752329; font-weight: 900;">Customer Reviews</h2>
+            <h2 class="text-uppercase text-center" style="color: #752329; font-weight: 900;">Customer Reviews</h2>
             <p class="display-5 mb-4 mb-md-5 text-center">We deliver what we promise. See what our Customers express about us.</p>
             <hr class="w-50 mx-auto mb-5 mb-xl-9" style="border-color: #752329;">
             </div>
