--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -20,53 +20,84 @@
 
     <%- include('header.ejs') %>
 
-    <div style="text-align: center;">
-        <h1>CART</h1>
-        <br> <!-- FOR DISPLAY PURPOSES ONLY -->
-        <% if (cart.products && cart.products.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
-            <% var total = []%>
-            <% var totalPrice = 0%>
-            
-            <div class="row">
-                <table style="text-align: center;">
-                    <tr>
-                        <th>Product</th>
-                        <th>Unit Price</th>
-                        <th>Quantity</th>
-                        <th>Total Price</th>
-                        <th>Actions</th>
-                    </tr>
+    <section class="py-3" style="background-color: #f3f3f2; margin-top: 0%; padding-top: 0%;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col">
+                    <p>
+                        <span class="h2">Shopping Cart</span>
+                        <span class="h4">(<%= cart.products.length %> items in your cart)</span>
+                    </p>
 
-                <% cart.products.forEach(products => { %>
-                    <tr>
-                        <td class="title"><%= products.product_name %></td>    
-                        <td>PHP <%= products.price %></td>
-                        <td>
-                            <button class="btn btn-dark minus" hidden>-</button>
-                            <div style="display: inline-block;" class="quantity"><%= products.quantity %></div>
-                            <button class="btn btn-dark plus" hidden>+</button>
-                            <button class="btn btn-success save" hidden>SAVE</button>
-                        </td>
-                        <td>PHP <%= products.price * products.quantity %></td>
-                        <td>
-                            <button class="btn btn-secondary edit">Edit</button>
-                            <button class="btn btn-danger remove">Remove</button>
-                        </td>
-                        <br> <!-- FOR DISPLAY PURPOSES ONLY -->
-                    </tr>
-                    <% total.push(products.price * products.quantity) %>
-                <% }) %>
-                </table>
+                    <% if (cart.products && cart.products.length > 0) { %> <!-- CHECK IF MAY REVIEWS BA YUNG USER -->
+                        <% var total = []%>
+                        <% var totalPrice = 0%>
+
+                        <% cart.products.forEach(products => { %>
+                            <div class="card mb-4">
+                                <div class="card-body p-4">
+                                    <div class="row text-center">
+                                        <div class="col-md-3">
+                                            <p class="small text-muted mb-2">Name</p>
+                                            <p class="lead fw-normal mb-0 title"><%= products.product_name %></p>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <p class="small text-muted mb-2">Price</p>
+                                            <p class="lead fw-normal mb-0" id="price1">₱ <%= products.price %></p>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <p class="small text-muted mb-2">Quantity</p>
+                                            <button class="btn btn-dark minus" hidden>-</button>
+                                            <div style="display: inline-block;" class="quantity text-muted"><%= products.quantity %></div>
+                                            <button class="btn btn-dark plus" hidden>+</button>
+                                            <button class="btn btn-success save" hidden>SAVE</button>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <p class="small text-muted mb-2">Total</p>
+                                            <p class="lead fw-normal mb-0" id="total1">₱ <%= products.price * products.quantity %></p>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <p class="small text-muted mb-2">Edit</p>
+                                            <div class="d-flex justify-content-center">
+                                                <button class="btn btn-outline-secondary me-1 edit" type="button">Edit</button>
+                                                <button class="btn btn-outline-danger remove" type="button">Delete</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <% total.push(products.price * products.quantity) %>
+                        <% }) %>
+
+                        <% total.forEach(x => { %>
+                            <% totalPrice += x; %>
+                        <% }) %>
+
+                    <% } else { %>
+                            <h2>You Have Nothing on Your Cart!</h2>
+                    <% } %>
+
+                          
+                    <div class="card mb-5">
+                        <div class="card-body p-4">
+                            <div class="d-flex justify-content-end align-items-center">
+                                <p class="mb-0 d-flex align-items-center">
+                                    <span class="small text-muted me-2">Order total:</span>
+                                    <span class="lead fw-normal" id="orderTotal">₱<%= totalPrice %></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="d-flex justify-content-end">
+                        <a href="/gear" class="btn btn-dark btn-lg me-2" role="button" style="background-color: #252020; border-color: #252020;">Continue Shopping</a>
+                        <button type="button" class="btn btn-primary btn-lg" style="background-color: #752329; border-color: #752329;" id="checkout">Check Out</button>
+                    </div>
+                </div>
             </div>
-            <% total.forEach(x => { %>
-                <% totalPrice += x; %>
-            <% }) %>
-            <br> <!-- FOR DISPLAY PURPOSES ONLY -->
-            <h2>Total : <%= totalPrice %></h2> 
-        <% } else { %>
-                <h2>You Have Nothing on Your Cart!</h2>
-        <% } %>
-    </div>
+        </div>
+    </section>
 
     <%- include('footer.ejs') %>
 
@@ -178,6 +209,10 @@
                 });
             });    
         }
+
+        document.getElementById("checkout").addEventListener("click", () => {
+            alert("FEATURE NOT AVAILABLE YET SIR HEHE");
+        })
 
     </script>
 
